argo-rollout-istio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
spec:
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-demo
spec:
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
