argo-rollout-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-vs
spec:
  hosts:
    - "rollouts-demo-rollout.apps.shaktiman.lab.psi.pnq2.redhat.com"
  gateways:
    - python-gw
  http:
    - match:
      - uri:
          prefix: "/abc"
      rewrite:
        uri: '/'
      route:
      - destination:
           host: rollouts-demo
           port:
             number: 8000
    - match:
      - uri:
          prefix: "/def"
      rewrite:
        uri: '/'
      route:
      - destination:
           host: rollouts-demo-demo
           port:
             number: 8000
